@@ -13,9 +13,7 @@ const chunking_test = require('./chunking-test');
 
 class App extends GenericApp {
   constructor(options, emit) {
-    super();
-    this.options = options;
-    this.emit = emit;
+    super(options, emit);
   }
 
   welcome_screen(req, res) {
@@ -52,10 +50,6 @@ class App extends GenericApp {
       res.setHeader('Set-Cookie', `JSESSIONID=${jsid}; path=/`);
     }
     return data;
-  }
-
-  log(severity, line) {
-    return this.options.log(severity, line);
   }
 }
 
