@@ -21,7 +21,7 @@ function execute_request(app, funs, req, res, data) {
     } else {
       app['handle_error'](req, res, x);
     }
-    app['log_request'](req, res, true);
+    app.log_request(req, res, true);
   }
 }
 
@@ -88,7 +88,7 @@ module.exports.generateHandler = function generateHandler(app, dispatcher) {
       } else {
         app['handle_404'](req, res);
       }
-      app['log_request'](req, res, true);
+      app.log_request(req, res, true);
     }
   };
 };
