@@ -5,6 +5,7 @@ Unreleased
   * Update minimum Node.js version to 6.X.
   * Update SockJSConnection implementation to be compatible with latest Node.js streams.
   * SockJSConnection properties `readable` and `writable` have been removed. These are used internally by Node.js streams.
+  * Remove `console.log` logging by default.
 
 
 0.3.18
